--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .app-wrapper{
   width: 1200px;
   margin: 0 auto;
+  padding: 5px; 
 display: grid;
 grid-template-areas: 
 "h h"
 "s p";
-grid-template-rows: 60px 1fr;
+grid-template-rows: 1fr 8fr;
 grid-template-columns: 2fr 10fr;
 grid-gap: 10px;
-
 }
